@startuml

abstract class ApplianceData {
  +getHoursUsed(): double
  +getWattage(): double
}

class BillPredictor {
  -appliancePowerMap: Map<String, ApplianceData>
  +getAppliancePowerMap(): Map<String, ApplianceData>
  +BillPredictor()
  +predictNextMonthBill(applianceHoursMap: Map<String, ApplianceData>): double
  +addCustomAppliance(appliance: String, hoursUsed: double, wattage: double): void
  -calculateTotalPowerUsage(applianceHoursMap: Map<String, ApplianceData>): double
  -initializeAppliancePowerMap(): void
}

class ElectricityBillProjection {
  -monthComboBox: ComboBox<YearMonth>
  -applianceBox: ComboBox<String>
  -hoursUsedField: TextField
  -wattageField: TextField
  -resultLabel: Label
  -tipsArea: TextArea
  -applianceHoursMap: Map<String, ApplianceData>
  -addedAppliancesList: ListView<String>
  -addedAppliances: List<String>
  -titleLabel: Label
  -gridPane: GridPane
  -saveButton: Button
  -openButton: Button
  -isPresetApplianceSelected: boolean
  -monthPicker: MonthPicker
  +start(primaryStage: Stage): void
  +addAppliance(): void
  +addCustomAppliance(): void
  +parseDoubleValue(value: String): double
  +updatePredictionAndTips(): void
  +updateApplianceList(): void
  +resetForm(): void
  +updateMonth(): void
  +loadData(yearMonth: YearMonth): void
  +loadData(month: String): void
  +saveData(month: String): void
  +saveData(): void
  +loadData(): void
  +logout(): void
  +main(args: String[]): void
}

class MonthPicker {
  +MonthPicker()
}

class ElectricityBillProjectionSettings {
  -currentStage: Stage
  +start(primaryStage: Stage): void
  +logout(): void
  +main(args: String[]): void
}

class Login {
  -usernameField: TextField
  -passwordField: PasswordField
  +start(primaryStage: Stage): void
  +login(primaryStage: Stage): void
  +openUserView(primaryStage: Stage): void
  +openAdminView(primaryStage: Stage): void
  +main(args: String[]): void
}

' Define associations with the four pillars as labels
BillPredictor --|> Map: "Encapsulation"
BillPredictor *-- ElectricityBillProjection: "Abstraction"
ElectricityBillProjection *-- ComboBox: "Abstraction"
ElectricityBillProjection *-- TextField: "Abstraction"
ElectricityBillProjection *-- Label: "Abstraction"
ElectricityBillProjection *-- TextArea: "Abstraction"
ElectricityBillProjection *-- ListView: "Abstraction"
ElectricityBillProjection *-- Button: "Abstraction"
ElectricityBillProjection *-- MonthPicker: "Abstraction"

BillPredictor *-- ApplianceData: "Inheritance"
ApplianceData <|-- ApplianceData

ElectricityBillProjectionSettings *-- Button: "Abstraction"
ElectricityBillProjectionSettings *-- Label: "Abstraction"

Login *-- TextField: "Abstraction"
Login *-- PasswordField: "Abstraction"
Login *-- Button: "Abstraction"
Login *-- Alert: "Abstraction"
Login *-- ElectricityBillProjection: "Abstraction"
Login *-- ElectricityBillProjectionSettings: "Abstraction"

@enduml
